@@ -2065,9 +2065,6 @@ register struct obj *obj;
 		obj->oy = current_container->oy;
 		addtobill(obj, FALSE, FALSE, FALSE);
 	}
-	if (is_pick(obj) && !obj->unpaid && *u.ushops && shop_keeper(*u.ushops))
-		verbalize("You sneaky cad! Get out of here with that pick!");
-
 	otmp = addinv(obj);
 	loadlev = near_capacity();
 	prinv(loadlev ?
