@@ -34,6 +34,7 @@
 	* Nerf The Eye of the Aethiopica energy production
 	* Partly eaten corpses are worthless for sacrificing
 	* Potion of water used against iron golems are more effective
+	* Carrying digging tools to shop is no longer blocked
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
